# iris

./: .brooks-lint-history.json  .codex-anysearch-docs-chunk.js  .gitignore  .prettierrc  1.2.5-markdown-performance-optimization-plan.md  AGENTS.md  AGENT_TASK_RUNTIME_REFACTOR_PLAN.md  AI-AGENT-PHASE-1-RUNTIME-FOUNDATION.md  AI-AGENT-PHASE-2-UNIFIED-ASSISTANT.md  AI-AGENT-PHASE-3-MODEL-PERSONA-ROUTING.md  AI-AGENT-PHASE-4-SKILLS-HARNESS-CLOSED-LOOP.md  AI-AGENT-PHASE-5-MARKDOWN-PERMISSION-BASE.md  AI-AGENT-ROADMAP.md  AI-AGENT-UI-UX-PLAN.md  AI-HARNESS-REWRITE-PLAN.md  AI_HARNESS_MODERNIZATION_PLAN.md  AI_LOCAL_REFERENCE_AND_RUN_FINALIZATION_FIX_PLAN.md  ARCH-AUDIT-2026-07-06.md  ARCHITECTURE.md  AUDIT-2026-06-02.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUsersrh091AppDataLocalTempiris_tracked_files.txt  DeepSeek审查结果.md  FRONTEND-AUDIT.md  Iris AI Agent 体系全阶段完善总指引.md  MARKDOWN-REMEDIATION-PLAN.md  MARKDOWN_AI_PRESENTATION_PLAN.md  MARKDOWN_CONTRACT_PLAN.md  MARKDOWN_EDITOR_REFACTOR_PLAN.md  MARKDOWN_PROGRAM_INDEX.md  MIMO审查结果.md  README.md  ROADMAP.md  SECURITY.md  TECH_DEBT_REVIEW.md  TEST_GAP_BACKLOG.md  eslint.config.js  findings.md  (+14 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  temp_patch.py  中国共产党纪律处分条例.html
src-tauri/benches/: ai_benchmarks.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_core.down.sql  001_core.sql  002_vec.down.sql  002_vec.sql  003_versions.sql  004_files_dedupe.down.sql  004_files_dedupe.sql  005_drop_iris_metadata_files.down.sql  005_drop_iris_metadata_files.sql  006_versions_kind.down.sql  006_versions_kind.sql  007_recycle_bin.down.sql  007_recycle_bin.sql  008_chunks_char_count.down.sql  008_chunks_char_count.sql  009_ai_runtime.down.sql  009_ai_runtime.sql  010_knowledge_index.down.sql  010_knowledge_index.sql  011_eval_results.down.sql  011_eval_results.sql  012_session_title.down.sql  012_session_title.sql  013_ai_trace_checkpoint.down.sql  013_ai_trace_checkpoint.sql  014_web_page_cache.down.sql  014_web_page_cache.sql  015_search_cache.down.sql  015_search_cache.sql  016_cas_refs.down.sql  016_cas_refs.sql  017_rename_cascade.down.sql  017_rename_cascade.sql  018_skill_install_sources.down.sql  018_skill_install_sources.sql  019_skill_activation_index.down.sql  019_skill_activation_index.sql  020_tool_audit.down.sql  020_tool_audit.sql  021_skill_lifecycle_metadata.down.sql  (+69 more)
src-tauri/resources/embedding-models/: bge-small-zh-v1.5.manifest.json
src-tauri/src/: app.rs  chrome_metrics.rs  config_manifest.rs  credentials.rs  debug_session_log.rs  error.rs  hygiene.rs  lib.rs  macos_traffic_lights.rs  main.rs  paths.rs  scheduler.rs  window_chrome.rs
src-tauri/src/ai_harness/: evidence_ledger.rs  evidence_mixer.rs  harness_confirm.rs  harness_confirm_tests.rs  harness_support.rs  harness_task.rs  mod.rs  tool_turn.rs
src-tauri/src/ai_runtime/: agent_capacity_eval.rs  agent_capacity_eval_tests.rs  agent_evidence_repository.rs  agent_evidence_repository_tests.rs  agent_permissions.rs  agent_run_repository.rs  agent_run_repository_tests.rs  agent_task.rs  agent_task_policy.rs  agent_tool_loop.rs  agent_tool_loop_tests.rs  assistant_facade.rs  capability_resolver.rs  chapter_workflow.rs  circuit_breaker.rs  citation_linkify.rs  citation_workflow.rs  classified_document_policy_repository.rs  classified_ephemeral.rs  classified_retrieval.rs  classified_run_engine.rs  classified_session.rs  context_cache.rs  context_planner.rs  conversation_memory.rs  deliberation.rs  direct_provider_route.rs  document_policy_repository.rs  document_workflow.rs  domain_executor.rs  domain_executor_tests.rs  environment.rs  eval.rs  evidence_ledger.rs  evidence_mixer.rs  execution_plan.rs  frozen_change_plan.rs  frozen_change_plan_tests.rs  guardrails.rs  harness.rs  (+64 more)
src-tauri/src/ai_types/: mod.rs
src-tauri/src/ai_workflows/: assistant_facade.rs  chapter_workflow.rs  citation_workflow.rs  document_workflow.rs  mod.rs  organize_workflow.rs  research_workflow.rs  writing_workflow.rs
src-tauri/src/cas/: diff.rs  encryption.rs  garbage_collector.rs  hash.rs  mod.rs  patch.rs  ref_counter.rs  store.rs  write_guard.rs
src-tauri/src/commands/: ai_commands.rs  app_update.rs  assistant_commands.rs  citation_commands.rs  classified.rs  corpus_commands.rs  document_commands.rs  document_recovery.rs  export.rs  file.rs  graph.rs  llm.rs  llm_config_commands.rs  media.rs  minimax_config_commands.rs  mod.rs  organize_commands.rs  profile_commands.rs  recycle.rs  research_commands.rs  search.rs  settings.rs  tag.rs  template.rs  version.rs  window_chrome_cmd.rs  writing_commands.rs
src-tauri/src/crypto/: classified_io.rs  mod.rs  vault_key.rs
src-tauri/src/embedding/: engine.rs  mod.rs  queue.rs  rebuild.rs  scheduler.rs  store.rs
src-tauri/src/indexer/: chunker.rs  code_fence.rs  deferred.rs  frontmatter.rs  fts.rs  image_ref.rs  mod.rs  scan.rs  wikilink.rs
src-tauri/src/knowledge/: anchors.rs  corpora.rs  graph.rs  mod.rs  regulations.rs  templates.rs
src-tauri/src/llm/: anthropic.rs  config.rs  engine.rs  fetch_web_page.rs  http_politeness.rs  minimax_search.rs  mod.rs  model_catalog.rs  model_registry.rs  providers.rs  search_web.rs  web_search_config.rs
src-tauri/src/network/: cert_pinning.rs  mod.rs  proxy_policy.rs  (+1 more)
src-tauri/tests/: agent_permission_boundaries.rs  agent_permissions.rs  agent_run_hygiene.rs  agent_task_policy.rs  agent_task_runtime.rs  agent_vault_tools.rs  ai_agent_baseline_contracts.rs  ai_agent_phase1_contracts.rs  ai_agent_phase2_contracts.rs  ai_agent_phase3_4_contracts.rs  ai_agent_phase5_6_contracts.rs  ai_agent_phase7_8_contracts.rs  ai_agent_phase9_10_contracts.rs  classified_ai_security.rs  classified_vault.rs  context_cache.rs  embedding_rebuild_contract.rs  embedding_scheduler_contract.rs  file_ops.rs  frontmatter_index.rs  hygiene_paths.rs  index_scheduler_boundary.rs  rag_broker_eval.rs  rag_retrieval_contract.rs  semantic_recall_eval.rs  vault_watcher.rs
(+1146 files in other folders)
