[package]
name = "iris"
version = "1.0.0-alpha"
description = "Local-first AI-native Markdown notes"
authors = ["Iris Contributors"]
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "iris_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
notify-debouncer-full = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
walkdir = "2"
fastembed = "4"
scraper = "0.22"
urlencoding = "2"
toml = "0.8"
sqlite-vec = { version = "0.1.10-alpha.4", default-features = false, optional = true }

[features]
default = []
sqlite-vec = ["dep:sqlite-vec"]

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ai_benchmarks"
harness = false

[[test]]
name = "file_ops"
path = "tests/file_ops.rs"

[[test]]
name = "frontmatter_index"
path = "tests/frontmatter_index.rs"

[[test]]
name = "vault_watcher"
path = "tests/vault_watcher.rs"

[[test]]
name = "semantic_recall_eval"
path = "tests/semantic_recall_eval.rs"

[[test]]
name = "cas_hash"
path = "tests/cas/hash_test.rs"

[[test]]
name = "cas_store"
path = "tests/cas/store_test.rs"

[[test]]
name = "cas_ref_counter"
path = "tests/cas/ref_counter_test.rs"

[[test]]
name = "cas_garbage_collector"
path = "tests/cas/garbage_collector_test.rs"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
