[package]
name = "iris"
version = "1.2.11"
description = "Local-first AI-native Markdown notes"
authors = ["Iris Contributors"]
license = "AGPL-3.0"
edition = "2021"
rust-version = "1.85"

[lib]
name = "iris_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.33", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
minisign-verify = "0.2.5"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
notify-debouncer-full = "0.6"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
rmcp = { version = "2.2.0", default-features = false, features = ["client", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest"] }
http = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
webpki-roots = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
walkdir = "2"
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
scraper = "0.27"
urlencoding = "2"
toml = "0.8"
# Experimental: sqlite-vec registration uses unsafe; keep optional and require
# focused maintainer review before enabling in release builds.
sqlite-vec = { version = "0.1.10-alpha.4", default-features = false, optional = true }

[features]
default = []
sqlite-vec = ["dep:sqlite-vec"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ai_benchmarks"
harness = false

[[test]]
name = "classified_vault"
path = "tests/classified_vault.rs"

[[test]]
name = "file_ops"
path = "tests/file_ops.rs"

[[test]]
name = "frontmatter_index"
path = "tests/frontmatter_index.rs"

[[test]]
name = "vault_watcher"
path = "tests/vault_watcher.rs"

[[test]]
name = "cas_hash"
path = "tests/cas/hash_test.rs"

[[test]]
name = "cas_store"
path = "tests/cas/store_test.rs"

[[test]]
name = "cas_ref_counter"
path = "tests/cas/ref_counter_test.rs"

[[test]]
name = "cas_garbage_collector"
path = "tests/cas/garbage_collector_test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
